@@ -1,3 +1,8 @@
+2000-07-17  Adam Fedor  <fedor@gnu.org>
+
+	* Source/NSZone.m: Remove duplicate function definitions (when 
+	GS_WITH_GC is 1) already defined in NSZone.h.
+
 2000-07-17  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/externs.m: Some evil casts to avoid compiler warnings about
